--- a/Develop/style.css
+++ b/Develop/style.css
@@ -16,6 +16,9 @@ body{
 .text-center{
     font-weight: 700;
     color: white;
+    margin-top: 5px;
+    margin-bottom: 0;
+    text-shadow: 2px 2px #aaaa;
 }
 
 .card{
@@ -36,10 +39,10 @@ h3{
 
 a{
     color: mediumpurple;
-    text-shadow: 5px 4px 4px 0px #aaaaaa
 }
 .card-title{
     color: white;
+    text-shadow: 2px 2px #aaaa;
 }
 
 .card-header{
